@@ -7,24 +7,13 @@ DIST gflags-2.1.1.tar.gz 102015 SHA256 432edece8102fc141c2e3381e2eb5eabb1ce76148
 EBUILD gflags-2.0-r1.ebuild 763 SHA256 cd6538ef378746575555b9a2dbf843f849fed2e8239dbee2a76312c3e3d91b65 SHA512 a158750ca996a2b5752386c23e3ebd4af94764e9eda1a72221702e536334dd6c67916e5cdb4ed8e0fb493b8107e36322f6c7457d2780e1de160e36f8180df1e8 WHIRLPOOL e9b4ab7fc9b49f6969e5897ddd8322bcf090f45c9f610045435fdc57c893d0e3cd7b96642936095d6484105f62a0c98a3b79d965f62d614442c37aed2ab4430b
 EBUILD gflags-2.0.ebuild 731 SHA256 d9565f1c8e82729ae841ffa1db9325cb2e22a3f7835055e8a4dcdbb256aa2fb9 SHA512 fea7ce0fb70982c21695d332971c3514be06a32ab0df14c3f0fcac13c1cb9745cc404fd02953cea15bcd863e681b8ce56864912f00f398ab38401a6e873d53ee WHIRLPOOL 2d9681046083e5a5aeee8851fcc026b9c71c0a8660e71f45df733271e322de676d26d62ef6602922c7b359a82d261d56fb9ebf97d108e7f9f75670dbc2875305
 EBUILD gflags-2.1.1-r1.ebuild 919 SHA256 e025242d3174b6d4a027219ef867999ee8a3c86af5109bb2d5c4c6427671700a SHA512 1dd049b0463bba798044afbb87b3bb63096974cf1c059c218a4ce8395c4c0239d6f1b184b43589310449333c1e70cf837eb3260beb8feaa7d36dbce5c152fe11 WHIRLPOOL 19e65c13e6c77d46a3e34ab2ff2d94ed6ad0722a16647072a476e9191c7da08d86ae4e7d86b84c6cdcafd16286dc3a035b8309264c92eb04a5c72e0b34cfa3c5
-MISC ChangeLog 4028 SHA256 5875d6e2af80607fe9a5b46dcf7117b35cd5d455be17fbfe5f363a7fd588b70d SHA512 ca1458d12f774377e2ee5177305a3a37ad322f855b661ce2c86b37902e2dad687aa85b04a7b154d93037741c30abb531200bea3aa862fd57b3e96163be82db43 WHIRLPOOL 57b3592693d65cb0b00c0ced4f970fa9b540d8cec46280eaa2849da999883a0520a62bad961ed7faf340efaaaa7fdeec17de74f1ebe1aead06e7159a74759d84
+EBUILD gflags-9999.ebuild 981 SHA256 5316138ae13163a1dc6a8d05c8eef3d53bef8b5acb53da8aa22635e6b6fb172f SHA512 e087a4131e5cb64bb7b3b91cd072fe4478925b4b82abc7bdca2454cfd8a8a0531b6e2d230289c36de4f9eac90096c2e7386ab0649577eebb0bf86c52e144e27c WHIRLPOOL dfdc16e768a16fa2e0172f9f977a438cca7fe0752e21617a276445ec94ec3186e7a26aa262a3b9bc8b92e6f3e006cbcd758fad7a0ac1626941e3fddc3a55aa35
+MISC ChangeLog 4157 SHA256 addd66fb5b8a7eac41569390421f32a1935cd2eab236dc424bdfcda7eb55504b SHA512 338f0dda7a8cc2a4b189f3d09e8ee00bf20edfba56086da1932bb9b4feccc9f22b4b976e13f1240b2819752d06ca1bcecdde4bd5afd8748037ec353b1241cc1c WHIRLPOOL 6be418f1330d78c2b0c774c4269dc8d677aaff60cb04e347b079579e6383e7b7243d5b37e6d3a8eefecbf1f7779f265fdef620332827b182e0ed48617d1c4ee6
 MISC metadata.xml 289 SHA256 9544b6246d963794455ace4d80c5e285920b534f98c87017ae7e285378050050 SHA512 5717a8e612700d6d5e8a0e0bf188efaf148c92782af7600209eb3e9a167e075fe8feaefab52c43290b1c5535ca63ca8f5969e470dfd7387c682868bb4621eddd WHIRLPOOL 09b74b91214bd09684c0af82d77153c9eb39bf45d5833cc67fb896e7c79243a4fd89441e6b95956c9c1f1f70a969650bbd06f0d104d1ab9ec43c0ffb5ed63b59
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTxpHyXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgKBcQAMBxs27Neaa57IUyNap0s5Kc
-PYHYVGSDs1Wsd5wSkbf9+xxdy2scSqmmLa1XYvu2Mrj8SsaZ67Lc1ueLI9FcyEV9
-qCHhM2d+AdHh68v/jiCZZoWWLXjsDwNspfmUmzKgrepKmF9NmKg/qU1sZPCIQQPI
-m21wJ21w9nFX16dc0jo++eBjVJaNje1BwVguIySNOA+8AobMP5LtRYnfQnFKm/GX
-zHnKhs7i+86K0X68yyY0Ip12O/Dyudxjik/3NQk+Mdte/firSy3iYPo0YOZp9g7J
-bOMWG4gDwIwDS+hs++okQ16fxHqlL7RbcLt/VyYg2W3htyBGYzo5YDY5M7xjeYjA
-OJ8lc9yjiIaTHcbvlfA9iQ1v6dTQGEAowbsmHy+41u4aweQ5enhrpwBOAGxLPg1o
-W524DTkZUOyUBGTin/NrOxtcvAI/GUNJDpePRjszh+L2W9qwBNaMjV9eoCghvzLQ
-bqHrtUhIkeCa7dQOqoZEExQ4zEOfvcSoy7vXDoejpClUW2bpc94bD0tbP9EIMWVc
-EzLIXM8D5sUTBV16qxKPZ5lRLgoh681Eb+smxOObkPgS00JFr+SwikK0Nc3C9ARX
-4RefF0NsJmSrNm83U/6REWrbITQyapGlCRNmT5ct/9jNYa6NZJ/o1XY1xsBmDlhP
-zlQiQkQ/w8hF7BBrVA8P
-=bBgx
+iF4EAREIAAYFAlPHGI8ACgkQC77qH+pIQ6RXpwEAhSs7Hl/pwoKfky4rQxhAQ9Gg
+DzjbcrTjtt0ndkBogXUBAMcztHIeHg8pDlkBTV3/oTzBWrM4eMXpLvztYUAiBKJp
+=Hs3O
 -----END PGP SIGNATURE-----
