@@ -1,0 +1,12 @@
+DEFINED_PHASES=install prepare
+DESCRIPTION=GUI Console for sguil Network Security Monitoring
+EAPI=5
+HOMEPAGE=http://sguil.sf.net
+IUSE=ssl
+KEYWORDS=~amd64 ~x86
+LICENSE=QPL
+RDEPEND=>=dev-lang/tcl-8.3[-threads] >=dev-lang/tk-8.3 >=dev-tcltk/itcl-3.2 >=dev-tcltk/tclx-8.3 dev-tcltk/itk dev-tcltk/iwidgets dev-tcltk/tcllib net-analyzer/wireshark ssl? ( >=dev-tcltk/tls-1.4.1 )
+SLOT=0
+SRC_URI=https://github.com/bammv/sguil/archive/v0.9.0.tar.gz -> sguil-0.9.0.tar.gz
+_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=258cbc9d66142e914b548acd438104df
