@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST sguil-0.9.0.tar.gz 464204 SHA256 412be894d67a6487312dd16a98a580dda8c38cff2e24f7a6c25405857769782b SHA512 3f300901d0f0260fbc950b4c7604e3dc3eeb2d088ff45171db84e2d58e281242bf3582eac51162968f1f3766961aec4d0a7af54e85773102ee643a52e879cfa6 WHIRLPOOL eaaef918819ed781505abc727c65e08a9e6d6d0e53f842b5aa6ec4cd1278dc902375a45794b3989488c3507bc34e288593cd892c8a94293d8a7723bbdb6cef4e
 DIST sguil-client-0.8.0.tar.gz 216433 SHA256 bbce49630fd6264591a1e890cba3bad11cf18e9327c9f9cc02cb6dc8a19746bd SHA512 44e14273cb7506b89d3138a1c50160de99576e77d6d18e3cdab9f257a1d00d5a100c8d9790f6e93aea8312fab51d52260aedfaa00facf54107249686d93e09b3 WHIRLPOOL c7213ebcebd8eaf6418f9a0a9c6e7b5df4d507d434c0b10bc2f9a1d6bf0337d590b600af0335792b92d735fa5e71cd5547528f17d750064f98267cb331efccb4
 EBUILD sguil-client-0.8.0.ebuild 1261 SHA256 2d7c90ecddb045c787785f704301685c1bd29233d55606cad2ebac08824e045f SHA512 f9de817bf74a1e56e321f282c469fc3454bff51a32a67b3fd8881bc2f083dd90c616c462d5cc17dcfcaf952d29fc7c47147d4e49ec660a5cdc31701e279ec47f WHIRLPOOL 62815dfd88b2dbe3b40f14fdee7258b16e264c1ffd2a1c4a8ea5ebc7690f94a948aee6edc30a551f1296f169934dda3c923f73f4cb6077b2e44698c9ccb3ded0
-MISC ChangeLog 1875 SHA256 d2507805aac176ac4dd2fa6d6a7c57478d3253a514da6dbdb249141ec6077ca5 SHA512 14a7e81c6aeadb424b0624120c13802bec3ad6b14122205eb3a653809257190e0e177708a404842960c692fae51d8c05ab0d9df5efcfa205a37de2c7cc86c116 WHIRLPOOL 53f9a53967040fc1c68a5c83f475e1e5e30db712a57914e2e1fb028fadf8a506c0d82e477961d54f11a3b5c567236613c5f7fc4e8e1d79eaff6e325af1a2ce0c
+EBUILD sguil-client-0.9.0.ebuild 1218 SHA256 d6fea7a229d7e4b8e6d097ab8bc9f5ac64ea26789b486cf2efbcaf223af0d156 SHA512 ead26da7d78d43e41d6548e75b2091acff15b48e2379d1da57dd7d016d989d7b43b22448e0ffed00633d67fa02f9a68e9e250bfb506794f1899c0632f93212ab WHIRLPOOL 2d5f0926d18fd4f0e42b5c624d556b117becc6c24d189504b1b32226e6a99790eabdc5c882f3e1a29886a5b8e498a5dfd33bf89546d6e9917a65fe17a7047bfc
+MISC ChangeLog 2002 SHA256 05d6d7e6983ae0b858330929dae8e5471756c4849a611e849c393b3deb5a2e05 SHA512 8db3e1cac584c994f8025fbd868a871c2413af4a3fbd5c4f33b7ac417d96d693c067cb57d117054ed2c2afe14f1bc675cdcc408afd24075a46647e7c13d9dd3b WHIRLPOOL d51efc81188dac3f81ba593c08b4b6cd67af632a0f6456a50f9c0abb8b4a0a199ff2d4997ec529daf73ae8a1bc57a58d69318a008900d19234da692137c1d358
 MISC metadata.xml 161 SHA256 442ce683981a7e51854e06ffdc2bdbbd956decf0d7a1f0c1ca056439a7230ebd SHA512 24f0086dfd65743d480e231efa20106ecd3980449864d6158b7e92542a0f4cfe58d3dbcbabd0042201beb43f5a57f6d30a912037cfcdc56ed56ac0532362c5da WHIRLPOOL de3b36cfc647f36b482a403ce526a395d38a69100917ee50aa5cbd888708678a6d4f67aae3381ef373b5ccb1df196503a2554765598491bd71da9c0415f24a80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPHDJIACgkQVWmRsqeSphO/NQCff5hXlbtMzHR3Zg8TkyrrtGX7
-MisAnA/jT+PgnE4lSfeFvVlRBB85lu6K
-=dzIY
+iEYEAREIAAYFAlPHEwcACgkQVWmRsqeSphPV/QCfTLrDVHqNdlAklglTqgJoQfcn
+X8sAn1rtXgtp1jLJxX8gL2J6zHs/3lEN
+=NwYA
 -----END PGP SIGNATURE-----
