@@ -1,6 +1,11 @@
 # ChangeLog for dev-cpp/gflags
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.28 2014/07/16 14:53:36 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.29 2014/07/17 00:27:58 floppym Exp $
+
+*gflags-9999 (17 Jul 2014)
+
+  17 Jul 2014; Mike Gilbert <floppym@gentoo.org> +gflags-9999.ebuild:
+  Add live ebuild for testing.
 
 *gflags-2.1.1-r1 (16 Jul 2014)
 
